# ChangeLog for app-office/libreoffice-bin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.139 2014/06/02 10:35:59 zlogene Exp $

  02 Jun 2014; Mikle Kolyada <zlogene@gentoo.org>
  libreoffice-bin-4.2.3.3-r1.ebuild:
  amd64 stable wrt bug #511144

*libreoffice-bin-4.2.3.3-r1 (23 May 2014)

  23 May 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-4.2.3.3-r1.ebuild:
  Version bump for icu-52 and libreoffice-4.2

  27 Mar 2014; Tomáš Chvátal <scarabeus@gentoo.org>
  -libreoffice-bin-4.1.3.2-r3.ebuild:
  Keep just latest around.

  22 Feb 2014; Agostino Sarubbo <ago@gentoo.org> libreoffice-bin-4.1.4.2.ebuild:
  Stable for x86, wrt bug #491150

  09 Feb 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-bin-4.1.4.2.ebuild:
  Less logging, bug 500798

  28 Jan 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-bin-4.1.4.2.ebuild:
  amd64 stable based on testing by pacho, bug 491150

*libreoffice-bin-4.1.4.2 (27 Jan 2014)

  27 Jan 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-4.1.4.2.ebuild:
  Version bump for bug 491150

  16 Jan 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -libreoffice-bin-4.1.3.2-r2.ebuild:
  Remove old

  16 Jan 2014; Agostino Sarubbo <ago@gentoo.org>
  libreoffice-bin-4.1.3.2-r3.ebuild:
  Stable for x86, wrt bug #496770

  11 Jan 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-bin-4.1.3.2-r3.ebuild:
  stable on amd64 based on testing by pacho, bug 496770

*libreoffice-bin-4.1.3.2-r3 (05 Jan 2014)

  05 Jan 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-4.1.3.2-r3.ebuild:
  Revision bump, for app-text/poppler-0.24.5 and media-libs/libpng-1.6.8
  stabilization

  17 Dec 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  -libreoffice-bin-4.1.2.3.ebuild, -libreoffice-bin-4.1.3.2.ebuild:
  remove old

  17 Dec 2013; Andreas K. Huettel <dilfridge@gentoo.org>