@@ -26,16 +26,26 @@ DIST x86-bin-libreoffice-kde-4.1.4.2.xd3 7616390 SHA256 c583760c28f6770377bb1118
 DIST x86-bin-libreoffice-kde-4.2.3.3-r1.xd3 6405672 SHA256 09fe9f1cd1644a383c31b30ee9b7fc7cc4097304d24582d6be8e22974c3216cc SHA512 b919b663a1bc65d7925eca802b39e160be4336a9232d5ef19e8bfd65708056b9e91d456719f821f121b76e25de18f5a4fb340d132fd1edf14642093287be57d0 WHIRLPOOL b911d33f50046a6af96f5e53f3e37faa7a300737e91a37e142453868e58d8c2302cea378ddb8e989faada6ed9170eee79355fab5d38e09cede59ef0382706c13
 DIST x86-bin-libreoffice-kde-java-4.1.4.2.xd3 20677137 SHA256 123232e47aaa45ed6430f6a1b58daf862d390fd17b4319e4418326cd4ffb05c4 SHA512 f0176eca7825cfc42b664f010027dba154a257fd071b6688ba6cd4b4eb50b64f3359e1091d052beb668cb9a7ecf44fd064075704e49ee88b9df6ad08e8964423 WHIRLPOOL 559241680a657a64de333b0c9680e769d16e6c07b9b9f05f03f0a194b8c8c2cfc75c6a25826b6bc9526feea9d1d565fffc6f1e235878a86d32d6611bf6ec1189
 DIST x86-bin-libreoffice-kde-java-4.2.3.3-r1.xd3 20280569 SHA256 ab9063f641dcd9df16bad65d22c4964c1f8bbd0f2d0235b23122d2a65387fc05 SHA512 d822b20ea5f8a2bfd2a07aacace2303b1509e39ab9225b1279284cab17664d1f599098665b2dd256e1452c34de0f50edca6215ea78ae12166df25c5b7cb66550 WHIRLPOOL b3ba6b05b2eb0a363182d5be8f8ce30679aa5e45af20a4b5a21861d0b7ce107873ae739f6d808b1671c815ba57a3f1184eecc653f39b9e80b3ff2b9a19bec0f0
-EBUILD libreoffice-bin-4.1.4.2.ebuild 6078 SHA256 9ba729c17e13abfc4dca8df6e458a2b885d96166ffad1faa58e014e974670eec SHA512 452e1b98282d816ae7b4ff48569f12b82aaa2b79a52a205c450a9698ba2910ba70bbdac031d434fd2db8ef0250e3b8eb835c6fa941ba5cc359d074920248cfe6 WHIRLPOOL 8bad90d20cf1b2eb3c4951e5e85e01e7082fbac619fdde5c981eac578e7b362c475f80780b80dd205cc3500c1e9056cd50a4f0fab3125b9631a0b7475bdbc823
-EBUILD libreoffice-bin-4.2.3.3-r1.ebuild 6192 SHA256 aa4e07e30aeb3b15da3fb437e8367946d5d6efc90fe6b2cfdd38ee5238810133 SHA512 818dc4ba6970dbc4b1e26204e80c3d10bf943cf1f5e5b8091b97a968edc52ee866eb44922655f7f3d94a26ba95344a52f8dc9e639e7e1a8f1f4830d4479a7f5e WHIRLPOOL d7f3a246570c087f15bb1a2888649b740922140e7864211708ebf856bac182dd568725853223a8bbfe331820630c1e4b29805ff80b0d22a150206544cb0a85cf
-MISC ChangeLog 20903 SHA256 77151018ac9f78fc8a939bb86ea59291df507d268ded42ba562aefc93af44578 SHA512 b88615341c327f74fc74c9057dea6c277f17f8d9cb298d831879946158d3ec511a1e62bce5c91af6eccffe73c2431a7952d3d30305098115886bbedd84e9b2b2 WHIRLPOOL e83807ff51c041c6337a34b8378fd680db8b83d504514277dabb298b441c6049b1e7b353277759204bede6be8a9ac3b4742c2dd8607edbd77037cf7497983353
+EBUILD libreoffice-bin-4.1.4.2.ebuild 6108 SHA256 b29c2082f1cca28d5dd999766f261f9de3671a64353980aab0e788ee35a1376e SHA512 673c5f58f83f0267918337a4f955ad01d73f893ea8cdeaddb65ecbf18e888460d8fdef4772d2c4d04c7f3296990d22bc09cafeb25dbd3d8d28204d4c09f36b6a WHIRLPOOL 3a9a16e12717619edb95f233253eb1d2e905864d1d05051a3e349083a628f1eab5930559f4361b13bb9da106a8245be82abeec3dfd90d299bd0775c3b88cbe19
+EBUILD libreoffice-bin-4.2.3.3-r1.ebuild 6218 SHA256 179cc54906351f8a711f6f363fb30a33dafefc077786324b8c82a7e216d7ecdf SHA512 eb4104c46744ebbdf7e2dcb7d63cedcc57431cd14c2b42f04842538d810831fcedac193a30184ba6d67c27f9f9c5cf37543aa67a045b6bb3ca06339115725e96 WHIRLPOOL 06c51fd0d5fa56ab1439a23e564245ed3dcf0e6d16083bcaeb395f41f4cf566a59c2f1a4c548f45f2c63c683deeaaaae45702398d13a49389efe6c6edfce289e
+MISC ChangeLog 21066 SHA256 54159317fe71a8b62108c21a1864696d9e8838894c5ef11900314aa111148951 SHA512 a2536a7eec4529c5c6fcf70a74a2267530291727890d4173ec6172f4ea708ddbf2dd7a11099cbe4d36f20bb660b11edbb95ce9bf2f110228d556cb766b215f2a WHIRLPOOL 4573d4872376c74b214290ccdf0fb82f2a67ccc1b06313b23bf20b00e9caaf43edf825e864e7896f0f23184f6e1efbbbf97c8e58d0f1540bd379168b3cb70be9
 MISC metadata.xml 409 SHA256 92a42f3ef25ede1bee68ec939cd4e0d88bbada54d90dab225f06bfc02b8bd498 SHA512 5a383da805155e80920620854f04e1bb9fcfe0764d0258ec95267c3229dae50cdb5f2cd83fbdc4cb7a856e079c696bb6f73d9aefec2fabef9317e391fd5db9ab WHIRLPOOL 158b0614005477cb448240a8f36e35fc8768c9ba0b83e71b1502dd1725fabafd4031d7c40a33030c683a14a38dad318f47db90712aab6d7ed4150fd26000193b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iJwEAQEIAAYFAlOMVNgACgkQG9wOWsQutdZ9PgQAtzE+PRH9Z3o3TV0nxo67mzzy
-F1C1pP4LOZmB9lfffB+x/0/fd7lVuXbrA/ADIBkoOCfJYfRC8/sJ1p5zWIOgyfVr
-B3oYpTyF2VH/hX1mAcO5crvS+Z4sc3zZMJTHDBwCOn1QJaldqdJcH69t0GQP2VK4
-eCwzVe5GvZePHqghNio=
-=sUO0
+iQJ8BAEBCABmBQJTkx1gXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOczsIP/RJdQcWo0j7uLbwWCbRo9olL
+nUAnnv2seqhNnbB0ZxGuyQnr28RBnEfcymc3xs1D7L6e7fNZYqkimBYqp/153KPK
+1chCOZ/iQWZTB0DHSO5F5mLZYw+o6I5UIJNryZpqvSImipbRtopJzfp+9K0Bi735
+FTjH/Qmnm7ZtG+jvI8tX0apP2iXfldZVvSst8BlvQFZ0N5HaHC4hhs60RwFLywoQ
+wJxOVzbwSAbUtiVRgwq1OUsrDjAYvr53eMZbXU/NrYao8sxIeMUe6kgQgEhU//D9
+fovZjJ4GJJbkNVE3vAIM6mZHmlE172YgmI6m6bdr7W+zC9a0UhQ5EMFimGoUR/yC
+L9z+gxvQ+P/+1ilbfuk0gHEJZ+t9WORVI0UQUHzDm9Gj7OUIg9LYguvega3SSblh
+LXkv6x1y6pN1f2E1gwpV/shC16eCojHQ/fAOrfV3RMYgoODKehrNSHLFQyFNzW08
+KvLDwAgOX0Q4nZldAZpcbLs3ggDfyRf07c2kBxzEPxIEoTPNdIcPL+zLYkcxrgHA
++67D/WBGdZu0Zw/WrLfnYiD55yhroWn4StfqwvDhESV3+7UWTiU2e0LUyeP1yu//
+Icd99PQSeobr8g6XxvCxB1NhVAPs+oirvedJokKzHF4gqnxteUoRKkdgPZdhcz6/
+OewJ2xEPT063lsZjnsbi
+=6RhC
 -----END PGP SIGNATURE-----
