@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin/libreoffice-bin-4.2.3.3-r1.ebuild,v 1.2 2014/06/02 10:35:59 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin/libreoffice-bin-4.2.3.3-r1.ebuild,v 1.3 2014/06/07 14:10:39 dilfridge Exp $
 
 EAPI=5
 
@@ -59,6 +59,7 @@ KEYWORDS="-* amd64 ~x86"
 
 BIN_COMMON_DEPEND="
 	=app-text/libexttextcat-3.4*
+	=app-text/libmwaw-0.2*
 	app-text/poppler:0/44
 	dev-libs/boost:0/1.52
 	dev-libs/icu:0/52
