@@ -7,10 +7,10 @@ IUSE=gnome java kde aqua kde elibc_FreeBSD java python_targets_python2_7 python_
 KEYWORDS=-* amd64 ~x86
 LICENSE=LGPL-3
 PDEPEND==app-office/libreoffice-l10n-4.2.3.3*
-RDEPEND==app-text/libexttextcat-3.4* app-text/poppler:0/44 dev-libs/boost:0/1.52 dev-libs/icu:0/52 =media-gfx/graphite2-1.2* media-libs/harfbuzz:0/0.9.18[icu] media-libs/libpng:0/16 >=sys-libs/glibc-2.17 virtual/jpeg:62 kde? ( >=kde-base/kdelibs-4.12.5:4 >=dev-qt/qtcore-4.8.5-r1:4 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads,xml] ) python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[threads,xml] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_single_target_python2_7(+)?,python_single_target_python3_3(+)?] app-arch/zip app-arch/unzip >=app-text/hunspell-1.3.2-r3 app-text/mythes app-text/libabw >=app-text/libexttextcat-3.2 app-text/libebook app-text/libetonyek app-text/liblangtag app-text/libmspub >=app-text/libmwaw-0.2 >=app-text/libodfgen-0.0.3 app-text/libwpd:0.9[tools] app-text/libwpg:0.2 >=app-text/libwps-0.2.2 >=app-text/poppler-0.16:=[xpdf-headers(+),cxx] >=dev-cpp/clucene-2.3.3.4-r2 dev-cpp/libcmis:0.4 dev-db/unixODBC >=dev-libs/boost-1.46:= dev-libs/expat >=dev-libs/hyphen-2.7.1 >=dev-libs/icu-4.8.1.1:= >=dev-libs/libatomic_ops-7.2d =dev-libs/liborcus-0.5*:= >=dev-libs/nspr-4.8.8 >=dev-libs/nss-3.12.9 >=dev-lang/perl-5.0 >=dev-libs/openssl-1.0.0d >=dev-libs/redland-1.0.16[ssl] media-gfx/graphite2 >=media-libs/fontconfig-2.8.0 media-libs/freetype:2 >=media-libs/harfbuzz-0.9.18:=[icu(+)] media-libs/lcms:2 >=media-libs/libpng-1.4 >=media-libs/libcdr-0.0.5 media-libs/libfreehand media-libs/libvisio >=net-misc/curl-7.21.4 net-nds/openldap sci-mathematics/lpsolve virtual/jpeg:0 >=x11-libs/cairo-1.10.0[X] x11-libs/libXinerama x11-libs/libXrandr x11-libs/libXrender net-print/cups >=dev-libs/dbus-glib-0.92 gnome? ( gnome-extra/evolution-data-server ) gnome? ( gnome-base/gconf:2 ) x11-libs/gdk-pixbuf[X] >=x11-libs/gtk+-2.24:2 media-libs/gstreamer:1.0 media-libs/gst-plugins-base:1.0 virtual/glu virtual/opengl net-libs/neon !app-office/libreoffice !<app-office/openoffice-bin-3.4.0-r1 !app-office/openoffice media-fonts/libertine-ttf media-fonts/liberation-fonts media-fonts/urw-fonts java? ( >=virtual/jre-1.6 ) kde? ( >=kde-base/oxygen-icons-4.4:4[aqua=] ) kde? ( dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.4:4[aqua=] ) java? ( >=dev-java/java-config-2.1.9-r1 )
+RDEPEND==app-text/libexttextcat-3.4* =app-text/libmwaw-0.2* app-text/poppler:0/44 dev-libs/boost:0/1.52 dev-libs/icu:0/52 =media-gfx/graphite2-1.2* media-libs/harfbuzz:0/0.9.18[icu] media-libs/libpng:0/16 >=sys-libs/glibc-2.17 virtual/jpeg:62 kde? ( >=kde-base/kdelibs-4.12.5:4 >=dev-qt/qtcore-4.8.5-r1:4 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads,xml] ) python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[threads,xml] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_single_target_python2_7(+)?,python_single_target_python3_3(+)?] app-arch/zip app-arch/unzip >=app-text/hunspell-1.3.2-r3 app-text/mythes app-text/libabw >=app-text/libexttextcat-3.2 app-text/libebook app-text/libetonyek app-text/liblangtag app-text/libmspub >=app-text/libmwaw-0.2 >=app-text/libodfgen-0.0.3 app-text/libwpd:0.9[tools] app-text/libwpg:0.2 >=app-text/libwps-0.2.2 >=app-text/poppler-0.16:=[xpdf-headers(+),cxx] >=dev-cpp/clucene-2.3.3.4-r2 dev-cpp/libcmis:0.4 dev-db/unixODBC >=dev-libs/boost-1.46:= dev-libs/expat >=dev-libs/hyphen-2.7.1 >=dev-libs/icu-4.8.1.1:= >=dev-libs/libatomic_ops-7.2d =dev-libs/liborcus-0.5*:= >=dev-libs/nspr-4.8.8 >=dev-libs/nss-3.12.9 >=dev-lang/perl-5.0 >=dev-libs/openssl-1.0.0d >=dev-libs/redland-1.0.16[ssl] media-gfx/graphite2 >=media-libs/fontconfig-2.8.0 media-libs/freetype:2 >=media-libs/harfbuzz-0.9.18:=[icu(+)] media-libs/lcms:2 >=media-libs/libpng-1.4 >=media-libs/libcdr-0.0.5 media-libs/libfreehand media-libs/libvisio >=net-misc/curl-7.21.4 net-nds/openldap sci-mathematics/lpsolve virtual/jpeg:0 >=x11-libs/cairo-1.10.0[X] x11-libs/libXinerama x11-libs/libXrandr x11-libs/libXrender net-print/cups >=dev-libs/dbus-glib-0.92 gnome? ( gnome-extra/evolution-data-server ) gnome? ( gnome-base/gconf:2 ) x11-libs/gdk-pixbuf[X] >=x11-libs/gtk+-2.24:2 media-libs/gstreamer:1.0 media-libs/gst-plugins-base:1.0 virtual/glu virtual/opengl net-libs/neon !app-office/libreoffice !<app-office/openoffice-bin-3.4.0-r1 !app-office/openoffice media-fonts/libertine-ttf media-fonts/liberation-fonts media-fonts/urw-fonts java? ( >=virtual/jre-1.6 ) kde? ( >=kde-base/oxygen-icons-4.4:4[aqua=] ) kde? ( dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.4:4[aqua=] ) java? ( >=dev-java/java-config-2.1.9-r1 )
 REQUIRED_USE=kde? ( !gnome ) gnome? ( !kde )
 RESTRICT=test strip
 SLOT=0
 SRC_URI=amd64? ( http://packages.gentooexperimental.org/packages/amd64-libreoffice/amd64-bin-libreoffice-4.2.3.3-r1.tar.xz kde? ( !java? ( http://packages.gentooexperimental.org/packages/amd64-libreoffice/amd64-bin-libreoffice-kde-4.2.3.3-r1.xd3 ) java? ( http://packages.gentooexperimental.org/packages/amd64-libreoffice/amd64-bin-libreoffice-kde-java-4.2.3.3-r1.xd3 ) ) gnome? ( !java? ( http://packages.gentooexperimental.org/packages/amd64-libreoffice/amd64-bin-libreoffice-gnome-4.2.3.3-r1.xd3 ) java? ( http://packages.gentooexperimental.org/packages/amd64-libreoffice/amd64-bin-libreoffice-gnome-java-4.2.3.3-r1.xd3 ) ) !kde? ( !gnome? ( java? ( http://packages.gentooexperimental.org/packages/amd64-libreoffice/amd64-bin-libreoffice-java-4.2.3.3-r1.xd3 ) ) ) ) x86? ( http://packages.gentooexperimental.org/packages/x86-libreoffice/x86-bin-libreoffice-4.2.3.3-r1.tar.xz kde? ( !java? ( http://packages.gentooexperimental.org/packages/x86-libreoffice/x86-bin-libreoffice-kde-4.2.3.3-r1.xd3 ) java? ( http://packages.gentooexperimental.org/packages/x86-libreoffice/x86-bin-libreoffice-kde-java-4.2.3.3-r1.xd3 ) ) gnome? ( !java? ( http://packages.gentooexperimental.org/packages/x86-libreoffice/x86-bin-libreoffice-gnome-4.2.3.3-r1.xd3 ) java? ( http://packages.gentooexperimental.org/packages/x86-libreoffice/x86-bin-libreoffice-gnome-java-4.2.3.3-r1.xd3 ) ) !kde? ( !gnome? ( java? ( http://packages.gentooexperimental.org/packages/x86-libreoffice/x86-bin-libreoffice-java-4.2.3.3-r1.xd3 ) ) ) )
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	kde4-base	4f85356160aa721ee3f4be09609def19	kde4-functions	7fc09e82c0d1735f44aedfa8e5073065	multilib	fac675dcccf94392371a6abee62d909f	pax-utils	2424f959506320f5196de8f79fa05297	prefix	21058c21ca48453d771df15500873ede	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	8ba35e0dacf49c6cae65901d183c971f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=6ef0b58e45dc737622b3867b835e3802
+_md5_=1182a8281896620baa9e3c3176240c69
