@@ -1,6 +1,10 @@
 # ChangeLog for app-office/libreoffice-bin
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.139 2014/06/02 10:35:59 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.140 2014/06/07 14:10:39 dilfridge Exp $
+
+  07 Jun 2014; Andreas K. Huettel <dilfridge@gentoo.org>
+  libreoffice-bin-4.1.4.2.ebuild, libreoffice-bin-4.2.3.3-r1.ebuild:
+  Fix libmwaw version, bug 511518
 
   02 Jun 2014; Mikle Kolyada <zlogene@gentoo.org>
   libreoffice-bin-4.2.3.3-r1.ebuild:
